--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #social i:hover {
-	color: ##a14d4d
+	color: #a14d4d
 }
 
 #footerwrap {
@@ -388,7 +388,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Copyrights */
 
 #copyrights {
-  background: #c98c8c;
+  background: #424242;
   padding: 20px 0;
   text-align: center;
 }
