--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
-	color: #f2f2f2;
+	color: #a14d4d;
 }
 
 .navbar-default {
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 #headerwrap {
 	background: url(../img/portugal_rocks.jpg) no-repeat center top;
 	margin-top: -70px;
-	padding-top: 250px;
+	padding-top: 350px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
