--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	color: #a14d4d;
+	color: #c37a7a;
 }
 
 .navbar-default .navbar-toggle {
