--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #diotcwrap {
-	background: url(../img/me2concert.jpg) no-repeat center top;
+	background: url(../img/portland_city.jpg) no-repeat center top;
 	margin-top: -70px;
 	padding-top: 250px;
 	text-align:center;
